# crypto-poker

contracts/: contract.sol
server/: .gitignore  Cargo.toml
server/src/: main.rs
